Mon Mar 30 12:12:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): checks for interrupt, stack and finalizers too.
	  [ruby-dev:38208], [Bug #1329]

	* eval.c (eval): replaces the message if frozen.

Sat Mar 28 04:31:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/{mkcall,mkcallback,mkcbtable}.rb: no needs of mkmf.

Sat Mar 28 04:00:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: MINIRUBY is given via make-flag.

Wed Mar 25 00:20:38 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/cgi.rb: $KCODE always holds its value in upper case.

	* lib/jcode.rb: Ditto.

Mon Mar 23 21:54:20 2009  Akinori MUSHA  <knu@iDaemons.org>

	* process.c: Eliminate an "unused variable" warning.

Mon Mar 23 21:18:30 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (StringIO#ungetbyte): New method
	  backported from 1.9.

Mon Mar 23 21:16:21 2009  Akinori MUSHA  <knu@iDaemons.org>

	* process.c: Stick with the K&R style in 1.8.

Mon Mar 23 21:07:09 2009  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (IO#ungetbyte): New method backported from 1.9.

	* array.c (ary_resize_capa): Remove an unused function.

	* array.c, bignum.c, dir.c, enumerator.c, gc.c, io.c, numeric.c,
	  object.c, re.c, string.c, struct.c: Mixing two styles is not a
	  good thing.  Stick with the K&R style in 1.8.

Sun Mar 22 20:39:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb: use Kernel.exit to get rid of using
	  IRB::ExtendCommandBundle#exit.  a patch from Dmitry Vazhov at
	  [ruby-core:22986].

Fri Mar 20 22:55:00 2009  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_convert_type, rb_to_integer)
	  (rb_check_convert_type): Improve error messages.

Fri Mar 20 18:41:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (Array#try_convert): New method backported from 1.9.

	* hash.c (Hash#try_convert): New method backported from 1.9.

	* io.c (IO#try_convert): New method backported from 1.9.
