@@ -579,9 +579,9 @@ if $command_output
   open($command_output, 'wb') do |f|
     case $command_output
     when /\.sh\z/
-      f.puts message, "rm -f $0; exec #{cmd}"
+      f.puts message, "rm -f $0; exec \"$@\" #{cmd}"
     when /\.bat\z/
-      ["@echo off", message, cmd, "del %0 & exit %ERRORLEVEL%"].each do |s|
+      ["@echo off", message, "%* #{cmd}", "del %0 & exit %ERRORLEVEL%"].each do |s|
         f.print s, "\r\n"
       end
     else
