@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.8"
-#define RUBY_RELEASE_DATE "2009-03-30"
+#define RUBY_RELEASE_DATE "2009-04-03"
 #define RUBY_VERSION_CODE 188
-#define RUBY_RELEASE_CODE 20090330
+#define RUBY_RELEASE_CODE 20090403
 #define RUBY_PATCHLEVEL -1
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 8
 #define RUBY_RELEASE_YEAR 2009
-#define RUBY_RELEASE_MONTH 3
-#define RUBY_RELEASE_DAY 30
+#define RUBY_RELEASE_MONTH 4
+#define RUBY_RELEASE_DAY 3
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
