@@ -1,3 +1,9 @@
+Fri Apr  3 12:43:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (main): passes $(MAKE) to mkmain_cmd
+
+	* ext/extmk.rb (command_output): uses arguments to invoke make.
+
 Mon Mar 30 12:12:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_eval): checks for interrupt, stack and finalizers too.
